[package]
name = "gn"
description = "TCP tool for grugs"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/jdockerty/gn"
authors = ["Jack Dockerty"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
clap-stdin = { version = "0.5.1", features = ["tokio"] }
futures = "0.3.30"
humantime = "2.1.0"
tokio = { version = "1.39.3", features = ["net", "full"] }
